# spinning-boykisser

./: CMakeLists.txt  README.md  main.cpp
giflib-5.2.1/: egif_lib.c  gif_font.c
imgui-master/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
src/: bk.h  defines.h  resource.rc
src/catWindow/: catWindow.cpp  catWindow.h
src/gl/: gl.cpp  gl.h
src/utils/: config.cpp  config.h  gif.cpp  gif.h  runtime.cpp  runtime.h  window.cpp  window.h
